@@ -101,7 +101,8 @@
             <configuration>
                 <mainClass>MainProgram</mainClass>
                  <exec.args>
-        --module-path ./javafx --add-exports javafx.web/com.sun.javafx.webkit=ALL-UNNAMED --add-modules=javafx.graphics,javafx.web
+        --module-path ./javafx 
+        --add-modules=javafx.graphics,javafx.web
         %classpath
     </exec.args>
             </configuration>
